Get all class related apis working.
