# api/controllers/classes.js
@@ -1,3 +1,6 @@
+/**
+ * Created by ZhongyiTong on 11/7/15.
+ */
 "use strict";
 
 let commons = require('./commons');
@@ -6,7 +9,7 @@ let gitlab = require('gitlab')(commons.authObj);
 let classes = {};
 
 classes.listAll = (req, res) => {
-  new Promise((resolve, reject) => {
+  return new Promise((resolve, reject) => {
       gitlab.groups.all((groups) => {
         let classes = [];
         for (let group of groups) {
@@ -26,9 +29,9 @@ classes.listAll = (req, res) => {
 
 classes.get = (req, res) => {
   let id = req.swagger.params.id.value;
-  new Promise((resolve, reject) => {
-    gitlab.groups.show(id, function (group) {
-      resolve(group);
+  return new Promise((resolve, reject) => {
+      gitlab.groups.show(id, function (group) {
+        resolve(group);
       });
     }
   ).then((val) => {
@@ -40,11 +43,13 @@ classes.get = (req, res) => {
 
 classes.listAssignments = (req, res) => {
   let id = req.swagger.params.id.value;
-  new Promise((resolve, reject) => {
+  return new Promise((resolve, reject) => {
       gitlab.groups.listProjects(id, function (projects) {
         let assignments = [];
         for (let project of projects) {
-
+          if (group.name != 'syllabus') {
+            resolve(group);
+          }
         }
         resolve(projects);
       });
@@ -58,10 +63,41 @@ classes.listAssignments = (req, res) => {
 
 classes.listMaterials = (req, res) => {
   let id = req.swagger.params.id.value;
-  new Promise((resolve, reject) => {
-      gitlab.groups.listProjects(id, function (group) {
-        if (group.name == 'syllabus')
-          resolve(group);
+  return new Promise((resolve, reject) => {
+      gitlab.groups.listProjects(id, function (projects) {
+        for (let project of projects) {
+          if (project.name == 'syllabus') {
+            console.log(project.id);
+            resolve(project);
+          }
+        }
+      });
+    }
+  ).then((syllabus)=> {
+    return new Promise((resolve, reject) => {
+      gitlab.projects.repository.listTree(syllabus.id, function (list) {
+        console.log(list);
+        resolve(list);
+      });
+    });
+  }).then((list)=> {
+    let val = [];
+    for (let item of list) {
+      if (item.name.indexOf('.') != 0 && item.name.indexOf("README.md") == -1) {
+        val.push(item);
+      }
+    }
+    res.writeHead(200, {'Content-Type': 'application/json'});
+    res.write(JSON.stringify(val));
+    res.end();
+  });
+};
+
+classes.listMembers = (req, res) => {
+  let id = req.swagger.params.id.value;
+  return new Promise((resolve, reject) => {
+      gitlab.groups.listMembers(id, function (members) {
+        resolve(members);
       });
     }
   ).then((val)=> {
@@ -70,5 +106,6 @@ classes.listMaterials = (req, res) => {
     res.end();
   });
 };
+
 
 module.exports = classes;
